[package]
name = "freezebox"
description = "FreezeBox: a deref'able lazy-initialized container"
keywords = ["lock-free", "atomic", "container", "lazy", "deref"]
categories = ["concurrency", "data-structures", "memory-management"]
version = "0.2.2"
repository = "https://github.com/ericseppanen/freezebox"
license = "MIT"
authors = ["Eric Seppanen <eds@reric.net>"]
readme = "README.md"
edition = "2018"
rust-version = "1.48"

[dependencies]
# No dependencies, yay!

[package.metadata.release]
dev-version = false
pre-release-commit-message = "release {{version}}"
